# SteamShine

./: steamshine.sh
.github/workflows/: _codeql.yml  _common-lint.yml  build-ci-image.yml  build-steamos.yml  ci.yml  localize.yml  release-steamos.yml  update-pages.yml
ci/steamos/: Containerfile  mirrorlist  packages.txt  pacman.conf  steam-os-ci-builder.asc
ci/steamos/baselines/: steamos-3.8.16-20260716.1.json
cmake/compile_definitions/: common.cmake
docs/: IMPLEMENTATION_STATUS.md  INSTALLATION.md  README.md  STEAMOS_ADAPTIVE_STREAMING_DESIGN.md  STEAMOS_AUTO_VIRTUAL_DISPLAY_IMPLEMENTATION.md  STEAMOS_CONTROL_PLANE_DESIGN.md  STEAMOS_HARDWARE_TEST.md  STEAMOS_HDR_IMPLEMENTATION_PLAN.md  STEAMOS_RELEASE_PROCESS.md  STEAMOS_SETUP_SCRIPT.md  STEAMOS_VIRTUAL_SESSION_PLAN.md  STREAMING_PRIORITY_AND_PERFORMANCE_POLICY.md  TROUBLESHOOTING.md  UNINSTALLATION.md
scripts/: collect-ninja-timing.py  collect-steamos-runtime-baseline.sh  compare-steamos-ci-timings.sh  diagnose-steamos-virtual-display.sh  package-steamos-artifact.sh  test-steamos-latency.sh  test-steamos-reconnect.sh  test-steamos-ssd-writes.sh  test-steamos-virtual-display.sh
src/: config.cpp  config.h  main.cpp  nvhttp.cpp  process.cpp  steamos_virtual_session.cpp  steamos_virtual_session.h  steamos_virtual_session_core.cpp  steamos_virtual_session_core.h  stream.cpp  video.cpp
src/platform/linux/: misc.cpp  vulkan_encode.cpp  vulkan_encode.h  wayland.cpp  wlgrab.cpp
tests/: CMakeLists.txt
tests/fixtures/steamos/: fixture.sh
tests/integration/: test_steamshine_script.sh
tests/steamos_core/: CMakeLists.txt
tests/steamos_lifecycle/: CMakeLists.txt  stubs.cpp
tests/unit/: test_steamos_virtual_session.cpp  test_steamos_virtual_session_core.cpp
